--- a/Assets/GameAnalytics/Tooling/Editor/GameAnalytics.Editor.asmdef
+++ b/Assets/GameAnalytics/Tooling/Editor/GameAnalytics.Editor.asmdef
@@ -3,7 +3,10 @@
     "rootNamespace": "",
     "references": [
         "GUID:dc45adb08a3230441b97a02fde928bc7",
-        "GUID:478a2357cc57436488a56e564b08d223"
+        "GUID:478a2357cc57436488a56e564b08d223",
+        "GUID:e43142fc3fec6554980dde6126631f1d",
+        "GUID:21d1eb854b91ade49bc69a263d12bee2",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [
         "Editor"
