--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.polybrush": "1.1.4",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.1.0",
+    "com.unity.splines": "2.3.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
